--- a/src/components/DetailFilms/BookTicket.scss
+++ b/src/components/DetailFilms/BookTicket.scss
@@ -271,7 +271,7 @@
                         content   : "";
                         position  : absolute;
                         display   : block;
-                        width     : 15%;
+                        width     : 25% !important;
                         height    : 3px;
                         margin-top: -5px;
                         background: #fcaf17;
@@ -642,7 +642,7 @@
                     content   : "";
                     position  : absolute;
                     display   : block;
-                    width     : 15%;
+                    width     : 5%;
                     height    : 3px;
                     margin-top: -5px;
                     background: #fcaf17;
