--- a/src/components/DetailFilms/ChiTietPhim.scss
+++ b/src/components/DetailFilms/ChiTietPhim.scss
@@ -302,7 +302,7 @@
                         position    : absolute;
                         display     : block;
                         //left      : 13px;
-                        width       : 10%;
+                        width       : 20% !important;
                         height      : 3px;
                         background  : #fcaf17;
                     }
@@ -336,7 +336,7 @@
                             position    : absolute;
                             display     : block;
                             //left      : 13px;
-                            width       : 15%;
+                            width       : 20% !important;
                             height      : 3px;
                             background  : #fcaf17;
                         }
@@ -537,6 +537,7 @@
                 }
 
                 .row-info {
+
                     .row-info-detail {
                         width: 100%;
 
@@ -676,7 +677,7 @@
 
 .content-film {
     .row-content {
-        padding-top: 30px;
+        padding-top: 50px;
 
         .col-left {
             width        : 70%;
@@ -696,7 +697,7 @@
                     position    : absolute;
                     display     : block;
                     //left      : 13px;
-                    width       : 10%;
+                    width       : 5%;
                     height      : 3px;
                     background  : #fcaf17;
                 }
@@ -728,7 +729,7 @@
                         position    : absolute;
                         display     : block;
                         //left      : 13px;
-                        width       : 15%;
+                        width       : 5%;
                         height      : 3px;
                         background  : #fcaf17;
                     }
