--- a/src/components/Discount/DiscountList.scss
+++ b/src/components/Discount/DiscountList.scss
@@ -24,7 +24,7 @@
                         //margin-top  : -2px;
                         display       : block;
                         //left      : 13px;
-                        width         : 12%;
+                        width         : 30% !important;
                         height        : 3px;
                         background    : #fcaf17;
                     }
@@ -168,7 +168,7 @@
                     //margin-top  : -2px;
                     display       : block;
                     //left      : 13px;
-                    width         : 12%;
+                    width         : 5%;
                     height        : 3px;
                     background    : #fcaf17;
                 }
