--- a/src/components/ListTheater/ListTheater.scss
+++ b/src/components/ListTheater/ListTheater.scss
@@ -123,7 +123,7 @@
                         position  : absolute;
                         display   : block;
                         margin-top: 21px;
-                        width     : 15%;
+                        width     : 20% !important;
                         height    : 3px;
                         background: #fcaf17;
                     }
@@ -294,7 +294,7 @@
                         position     : absolute;
                         display      : block;
                         // margin-top: 21px;
-                        width        : 25%;
+                        width        : 25% !important;
                         height       : 3px;
                         background   : #fcaf17;
                         margin-bottom: 10px;
@@ -431,7 +431,7 @@
                     position  : absolute;
                     display   : block;
                     margin-top: 21px;
-                    width     : 15%;
+                    width     : 4%;
                     height    : 3px;
                     background: #fcaf17;
                 }
@@ -602,7 +602,7 @@
                     position     : absolute;
                     display      : block;
                     // margin-top: 21px;
-                    width        : 25%;
+                    width        : 5%;
                     height       : 3px;
                     background   : #fcaf17;
                     margin-bottom: 10px;
